--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
                         <h3>Имя артиста</h3>
                         <p>Жанр • Описание</p>
                         <div class="artist-socials">
+                            <a href="artist.html"><i class="fas fa-user"></i></a>
                             <a href="#"><i class="fab fa-spotify"></i></a>
                             <a href="#"><i class="fab fa-youtube"></i></a>
                             <a href="#"><i class="fab fa-instagram"></i></a>
