--- a/index.html
+++ b/index.html
@@ -13,14 +13,12 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <h2>LABEL 52</h2>
+                <h2><a href="index.html" style="color: inherit; text-decoration: none;">LABEL 52</a></h2>
             </div>
             <ul class="nav-menu">
                 <li><a href="#home" class="nav-link">Главная</a></li>
-                <li><a href="#artists" class="nav-link">Артисты</a></li>
-                <li><a href="#releases" class="nav-link">Релизы</a></li>
-                <li><a href="#about" class="nav-link">О нас</a></li>
-                <li><a href="#contact" class="nav-link">Контакты</a></li>
+                <li><a href="faceit-ranking.html" class="nav-link">FACEIT Рейтинг</a></li>
+                <li><a href="spotify-stats.html" class="nav-link">Spotify Статистика</a></li>
             </ul>
             <div class="hamburger">
                 <span class="bar"></span>
@@ -35,7 +33,7 @@
         <div class="hero-container">
             <div class="hero-content">
                 <h1 class="hero-title">
-                    <span class="gradient-text">LABEL 52</span>
+                    <span class="gradient-text"><a href="index.html" style="color: inherit; text-decoration: none;">LABEL 52</a></span>
                     <br>Музыка будущего
                 </h1>
                 <p class="hero-description">
@@ -171,113 +169,22 @@
         </div>
     </section>
 
-    <!-- Секция о нас -->
-    <section id="about" class="about">
-        <div class="container">
-            <div class="about-content">
-                <div class="about-text">
-                    <h2>О LABEL 52</h2>
-                    <p>
-                        LABEL 52 — это инновационный музыкальный лейбл, который стремится 
-                        открывать новые таланты и создавать музыку, которая вдохновляет 
-                        и меняет мир. Мы верим в силу музыки как универсального языка, 
-                        способного объединять людей и создавать эмоциональные связи.
-                    </p>
-                    <p>
-                        Наша миссия — поддерживать артистов в их творческом пути, 
-                        предоставляя им платформу для самовыражения и развития 
-                        своего уникального звучания.
-                    </p>
-                    <div class="stats">
-                        <div class="stat">
-                            <h3>50+</h3>
-                            <p>Релизов</p>
-                        </div>
-                        <div class="stat">
-                            <h3>20+</h3>
-                            <p>Артистов</p>
-                        </div>
-                        <div class="stat">
-                            <h3>1M+</h3>
-                            <p>Прослушиваний</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="about-visual">
-                    <div class="about-image">
-                        <div class="placeholder-image">О НАС</div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
 
-    <!-- Секция контактов -->
-    <section id="contact" class="contact">
-        <div class="container">
-            <div class="section-header">
-                <h2 class="section-title">Свяжитесь с нами</h2>
-                <p class="section-subtitle">Готовы к сотрудничеству? Напишите нам!</p>
-            </div>
-            <div class="contact-content">
-                <div class="contact-info">
-                    <div class="contact-item">
-                        <i class="fas fa-envelope"></i>
-                        <div>
-                            <h3>Email</h3>
-                            <p>info@label52.com</p>
-                        </div>
-                    </div>
-                    <div class="contact-item">
-                        <i class="fas fa-phone"></i>
-                        <div>
-                            <h3>Телефон</h3>
-                            <p>+7 (XXX) XXX-XX-XX</p>
-                        </div>
-                    </div>
-                    <div class="contact-item">
-                        <i class="fas fa-map-marker-alt"></i>
-                        <div>
-                            <h3>Адрес</h3>
-                            <p>Москва, Россия</p>
-                        </div>
-                    </div>
-                    <div class="social-links">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
-                        <a href="#"><i class="fab fa-spotify"></i></a>
-                        <a href="#"><i class="fab fa-telegram"></i></a>
-                    </div>
-                </div>
-                <form class="contact-form">
-                    <div class="form-group">
-                        <input type="text" placeholder="Ваше имя" required>
-                    </div>
-                    <div class="form-group">
-                        <input type="email" placeholder="Email" required>
-                    </div>
-                    <div class="form-group">
-                        <textarea placeholder="Сообщение" rows="5" required></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Отправить</button>
-                </form>
-            </div>
-        </div>
-    </section>
+
+
 
     <!-- Футер -->
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <h3>LABEL 52</h3>
+                    <h3><a href="index.html" style="color: inherit; text-decoration: none;">LABEL 52</a></h3>
                     <p>Музыка будущего</p>
                 </div>
                 <div class="footer-links">
                     <div class="footer-section">
                         <h4>Лейбл</h4>
                         <ul>
-                            <li><a href="#about">О нас</a></li>
                             <li><a href="#artists">Артисты</a></li>
                             <li><a href="#releases">Релизы</a></li>
                         </ul>
@@ -285,7 +192,6 @@
                     <div class="footer-section">
                         <h4>Поддержка</h4>
                         <ul>
-                            <li><a href="#contact">Контакты</a></li>
                             <li><a href="#">FAQ</a></li>
                             <li><a href="#">Прайваси</a></li>
                         </ul>
@@ -293,7 +199,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 LABEL 52. Все права защищены.</p>
+                <p>&copy; 2025 LABEL 52. Все права защищены.</p>
             </div>
         </div>
     </footer>
