--- a/faceit-ranking.html
+++ b/faceit-ranking.html
@@ -184,5 +184,13 @@
 
     <!-- Скрипты -->
     <script src="faceit-ranking-script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script>
+  // ВСТАВЬ СВОИ ДАННЫЕ:
+  window.SUPABASE_URL = "https://wpsjgygdbkvdjkikvzws.supabase.co";
+  window.SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Indwc2pneWdkYmt2ZGpraWt2endzIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTYzNDMzMDQsImV4cCI6MjA3MTkxOTMwNH0.m1DFironTn3qT9aNNnCafYs81pTPQlsCVzw79Ss1QOg";
+</script>
+<script src="./faceit-ranking-script.js"></script>
+
 </body>
 </html>
