--- a/faceit-ranking.html
+++ b/faceit-ranking.html
@@ -53,11 +53,10 @@
             <thead>
               <tr>
                 <th scope="col">Имя</th>
-                <th scope="col">Ник</th>
                 <th scope="col">LVL</th>
                 <th scope="col">ELO</th>
-                <th scope="col">Регион</th>
-                <th scope="col">Steam</th>
+                <th scope="col">Матчей</th>
+                <th scope="col">Действия</th>
               </tr>
             </thead>
             <tbody id="faceit-table-body">
@@ -161,6 +160,22 @@
       };
     }
 
+    async function fetchMatchesCount(playerId) {
+      try {
+        // Статистика по CS2; при необходимости поменять game_id
+        const res = await fetch(`${FACEIT_API}/players/${encodeURIComponent(playerId)}/stats/cs2`, {
+          headers: { Authorization: `Bearer ${FACEIT_API_KEY}` }
+        });
+        if (!res.ok) return null;
+        const data = await res.json();
+        // Пытаемся извлечь количество матчей из разных возможных полей
+        const life = data.lifetime || data.LIFETIME || {};
+        return Number(life.Matches || life.matches || life.Total_Matches || life["Total Matches"]) || null;
+      } catch (_) {
+        return null;
+      }
+    }
+
     // 3) Рендер таблицы
     function renderRows(items) {
       const tbody = document.getElementById(TABLE_BODY_ID);
@@ -178,6 +193,7 @@
         const profileLinkOpen = row.faceit_url ? `<a href="${row.faceit_url}" target="_blank" rel="noopener">` : "";
         const profileLinkClose = row.faceit_url ? `</a>` : "";
 
+        const safeData = encodeURIComponent(JSON.stringify(row));
         tr.innerHTML = `
           <td>
             <div class="player">
@@ -185,14 +201,24 @@
               ${profileLinkOpen}${row.display_name}${profileLinkClose}
             </div>
           </td>
-          <td>${row.nickname ?? "—"}</td>
           <td>${row.level ?? "—"}</td>
           <td>${row.elo ?? "—"}</td>
-          <td>${row.region ?? "—"}</td>
-          <td>${row.steam_nickname ?? "—"}</td>
+          <td>${row.matches_count ?? "—"}</td>
+          <td><button class="btn btn-secondary" data-player='${safeData}'>Подробнее</button></td>
         `;
         tbody.appendChild(tr);
       }
+
+      // Навесим обработчики на кнопки
+      tbody.querySelectorAll('button[data-player]').forEach(btn => {
+        btn.addEventListener('click', (e) => {
+          const raw = e.currentTarget.getAttribute('data-player');
+          try {
+            const player = JSON.parse(decodeURIComponent(raw));
+            openDetailsModal(player);
+          } catch (_) {}
+        });
+      });
     }
 
     // 4) Главная функция
@@ -210,7 +236,7 @@
             nickname: info.nickname ?? p.nickname,
             level: info.level ?? null,
             elo: info.elo ?? null,
-            region: info.region ?? null,
+            matches_count: info.player_id ? await fetchMatchesCount(info.player_id) : null,
             steam_nickname: info.steam_nickname ?? null,
             avatar: info.avatar ?? null,
             faceit_url: info.faceit_url ?? null
@@ -224,7 +250,52 @@
       }
     }
 
+    // Простое модальное окно для подробной статистики
+    function openDetailsModal(player) {
+      const modal = document.getElementById('faceit-modal');
+      const overlay = document.getElementById('faceit-modal-overlay');
+      const titleEl = document.getElementById('faceit-modal-title');
+      const bodyEl = document.getElementById('faceit-modal-body');
+
+      titleEl.textContent = player.display_name || player.nickname || 'Профиль';
+      const profileLink = player.faceit_url ? `<a href="${player.faceit_url}" target="_blank" rel="noopener">Открыть профиль Faceit</a>` : '';
+      bodyEl.innerHTML = `
+        <div style="display:grid; gap:.5rem;">
+          <div><strong>LVL:</strong> ${player.level ?? '—'}</div>
+          <div><strong>ELO:</strong> ${player.elo ?? '—'}</div>
+          <div><strong>Матчей:</strong> ${player.matches_count ?? '—'}</div>
+          <div>${profileLink}</div>
+        </div>
+      `;
+
+      overlay.style.display = 'block';
+      modal.style.display = 'block';
+    }
+
+    function closeDetailsModal() {
+      const modal = document.getElementById('faceit-modal');
+      const overlay = document.getElementById('faceit-modal-overlay');
+      overlay.style.display = 'none';
+      modal.style.display = 'none';
+    }
+
+    document.addEventListener('click', (e) => {
+      if (e.target && (e.target.id === 'faceit-modal-close' || e.target.id === 'faceit-modal-overlay')) {
+        closeDetailsModal();
+      }
+    });
+
     document.addEventListener("DOMContentLoaded", loadFaceitTable);
   </script>
+
+  <!-- Модальное окно -->
+  <div id="faceit-modal-overlay" style="display:none; position:fixed; inset:0; background:rgba(0,0,0,.6);"></div>
+  <div id="faceit-modal" style="display:none; position:fixed; left:50%; top:50%; transform:translate(-50%,-50%); background: var(--card-bg); border:1px solid var(--border-color); border-radius:16px; width:min(560px, calc(100% - 2rem)); box-shadow: var(--shadow-card); overflow:hidden;">
+    <div style="display:flex; justify-content:space-between; align-items:center; padding:12px 16px; border-bottom:1px solid var(--border-color);">
+      <h3 id="faceit-modal-title" style="margin:0;">Подробная статистика</h3>
+      <button id="faceit-modal-close" class="btn btn-secondary">Закрыть</button>
+    </div>
+    <div id="faceit-modal-body" style="padding:16px; color: var(--text-secondary);"></div>
+  </div>
 </body>
 </html>
